Mobile menu font fix and footer alignment

--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,10 @@ nav {
     text-align: right;
 }
 
+.menu-list-item a {
+    color: #1a1a1a;
+}
+
 .cover-center {
     position: absolute;
     top: 50%;
@@ -406,6 +410,7 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
 .skill-logo {
@@ -456,6 +461,7 @@ button {
     font-size: 0.8rem;
     background: #1a1a1a;
     color: #fff;
+    text-align: center;
 }
 
 /* media queries */
